--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "vite-template-solid",
-  "version": "0.0.0",
-  "description": "",
+  "name": "sholong",
+  "description": "An app",
+  "version": "0.1.0",
   "scripts": {
     "start": "vite",
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
+    "prod": "$npm_execpath run build && vite preview --host",
     "serve": "vite preview"
   },
   "license": "MIT",
   "dependencies": {
+    "@floating-ui/dom": "^1.4.5",
+    "@solid-primitives/event-listener": "^2.2.13",
+    "@solid-primitives/intersection-observer": "^2.1.2",
+    "@solid-primitives/media": "^2.2.3",
+    "@solid-primitives/mouse": "^2.0.14",
     "@solid-primitives/resize-observer": "^2.0.18",
     "@solidjs/meta": "^0.28.5",
     "@solidjs/router": "^0.8.2",
@@ -17,6 +23,7 @@
     "solid-js": "^1.7.8"
   },
   "devDependencies": {
+    "@darkobits/vite-plugin-favicons": "^0.3.0",
     "@iconify-json/tabler": "^1.1.84",
     "@tailwindcss/container-queries": "^0.1.1",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
@@ -30,6 +37,7 @@
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.16.5",
     "vite": "^4.4.7",
+    "vite-plugin-pwa": "^0.16.4",
     "vite-plugin-solid": "^2.7.0",
     "vite-plugin-solid-svg": "^0.6.4"
   }
