--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   "license": "MIT",
   "dependencies": {
     "@floating-ui/dom": "^1.5.1",
-    "@solid-primitives/event-listener": "^2.2.13",
-    "@solid-primitives/intersection-observer": "^2.1.2",
-    "@solid-primitives/media": "^2.2.3",
-    "@solid-primitives/mouse": "^2.0.14",
-    "@solid-primitives/resize-observer": "^2.0.18",
+    "@solid-primitives/event-listener": "^2.2.14",
+    "@solid-primitives/intersection-observer": "^2.1.3",
+    "@solid-primitives/media": "^2.2.4",
+    "@solid-primitives/mouse": "^2.0.15",
+    "@solid-primitives/resize-observer": "^2.0.19",
     "@solid-primitives/timer": "^1.3.7",
     "@solidjs/meta": "^0.28.6",
     "@solidjs/router": "^0.8.2",
+    "fast-sort": "^3.4.0",
     "lightweight-charts": "^4.0.1",
     "marked": "^5.1.2",
-    "solid-js": "^1.7.8"
+    "solid-js": "^1.7.9"
   },
   "devDependencies": {
     "@darkobits/vite-plugin-favicons": "^0.3.0",
@@ -34,12 +35,12 @@
     "postcss": "^8.4.27",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.4.1",
-    "solid-devtools": "^0.27.6",
+    "solid-devtools": "^0.27.7",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.16.5",
-    "vite": "^4.4.7",
+    "vite": "^4.4.8",
     "vite-plugin-pwa": "^0.16.4",
     "vite-plugin-solid": "^2.7.0",
     "vite-plugin-solid-svg": "^0.6.4"
