--- a/package.json
+++ b/package.json
@@ -19,28 +19,29 @@
     "@solid-primitives/resize-observer": "^2.0.19",
     "@solid-primitives/timer": "^1.3.7",
     "@solidjs/meta": "^0.28.6",
-    "@solidjs/router": "^0.8.2",
+    "@solidjs/router": "^0.8.3",
     "fast-sort": "^3.4.0",
     "lightweight-charts": "^4.0.1",
-    "marked": "^5.1.2",
+    "marked": "^7.0.1",
     "solid-js": "^1.7.9"
   },
   "devDependencies": {
     "@darkobits/vite-plugin-favicons": "^0.3.0",
-    "@iconify-json/tabler": "^1.1.86",
+    "@edge-runtime/vm": "^3.0.4",
+    "@iconify-json/tabler": "^1.1.87",
     "@tailwindcss/container-queries": "^0.1.1",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/marked": "^5.0.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.1",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "solid-devtools": "^0.27.7",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.16.5",
-    "vite": "^4.4.8",
+    "vite": "^4.4.9",
     "vite-plugin-pwa": "^0.16.4",
     "vite-plugin-solid": "^2.7.0",
     "vite-plugin-solid-svg": "^0.6.4"
