--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sholong",
-  "description": "An app",
+  "name": "satonomics",
+  "description": "Satoshi Economics",
   "version": "0.1.0",
   "scripts": {
     "start": "vite",
@@ -12,17 +12,17 @@
   "license": "MIT",
   "dependencies": {
     "@floating-ui/dom": "^1.5.1",
-    "@solid-primitives/event-listener": "^2.2.14",
+    "@solid-primitives/event-listener": "^2.3.0",
     "@solid-primitives/intersection-observer": "^2.1.3",
-    "@solid-primitives/media": "^2.2.4",
-    "@solid-primitives/mouse": "^2.0.15",
-    "@solid-primitives/resize-observer": "^2.0.20",
+    "@solid-primitives/media": "^2.2.5",
+    "@solid-primitives/mouse": "^2.0.16",
+    "@solid-primitives/resize-observer": "^2.0.21",
     "@solid-primitives/timer": "^1.3.7",
     "@solidjs/meta": "^0.28.6",
     "@solidjs/router": "^0.8.3",
     "fast-sort": "^3.4.0",
     "lightweight-charts": "^4.0.1",
-    "marked": "^7.0.5",
+    "marked": "^8.0.0",
     "solid-js": "^1.7.11"
   },
   "devDependencies": {
@@ -32,13 +32,13 @@
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/marked": "^5.0.1",
     "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.28",
-    "prettier": "^3.0.2",
-    "prettier-plugin-tailwindcss": "^0.5.3",
+    "postcss": "^8.4.29",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.16.6",
-    "unplugin-icons": "^0.16.6",
+    "unplugin-icons": "^0.17.0",
     "vite": "^4.4.9",
     "vite-plugin-pwa": "^0.16.4",
     "vite-plugin-solid": "^2.7.0",
