--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "vite",
     "dev": "($npm_execpath outdated || read -p \"Press enter to ignore...\") && vite --host",
     "build": "vite build && sed 's+media=\"(device+media=\"screen and (device+g' dist/index.html | sed 's+</head>+<meta name=\"apple-touch-fullscreen\" content=\"yes\" /></head>+g' > index.html.tmp && mv index.html.tmp dist/index.html",
+    "format": "prettier --write './src'",
     "prod": "$npm_execpath run build && vite preview --host",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "vitest"
   },
   "license": "MIT",
   "dependencies": {
-    "@floating-ui/dom": "^1.5.1",
+    "@floating-ui/dom": "^1.5.2",
     "@solid-primitives/event-listener": "^2.3.0",
     "@solid-primitives/intersection-observer": "^2.1.3",
     "@solid-primitives/media": "^2.2.5",
@@ -29,11 +31,12 @@
   },
   "devDependencies": {
     "@darkobits/vite-plugin-favicons": "^0.3.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@iconify-json/tabler": "^1.1.91",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/marked": "^5.0.1",
     "autoprefixer": "^10.4.15",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
@@ -44,6 +47,7 @@
     "vite": "^4.4.9",
     "vite-plugin-pwa": "^0.16.5",
     "vite-plugin-solid": "^2.7.0",
-    "vite-plugin-solid-svg": "^0.6.4"
+    "vite-plugin-solid-svg": "^0.6.4",
+    "vitest": "^0.34.4"
   }
 }
