--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
   workflow_dispatch:
   schedule:
-    - cron: "0 */6 * * *"
+    - cron: '0 */6 * * *'
 
 jobs:
   update:
@@ -29,7 +29,7 @@ jobs:
         shell: bash
         run: |
           echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-      
+
       - uses: actions/cache@v3
         name: Setup pnpm cache
         with:
@@ -43,6 +43,6 @@ jobs:
 
       - name: Build
         run: pnpm build
-      
+
       - name: Test
-        run: pnpm test
+        run: pnpm test-prod
