--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@floating-ui/dom": "^1.5.2",
+    "@floating-ui/dom": "^1.5.3",
     "@solid-primitives/event-listener": "^2.3.0",
     "@solid-primitives/intersection-observer": "^2.1.3",
     "@solid-primitives/media": "^2.2.5",
     "@solid-primitives/memo": "^1.3.4",
     "@solid-primitives/mouse": "^2.0.16",
     "@solid-primitives/resize-observer": "^2.0.22",
+    "@solid-primitives/scheduled": "^1.4.1",
     "@solid-primitives/timer": "^1.3.7",
     "@solidjs/meta": "^0.28.6",
     "@solidjs/router": "^0.8.3",
