--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,11 @@
   function = "fetch"
 
 [[redirects]]
+  from = "/fetch/*"
+  to = "/fetch"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
