--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss": "^8.4.30",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
+    "rollup-plugin-visualizer": "^5.9.2",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.16.6",
